--- a/.gitmodules
+++ b/.gitmodules
@@ -4,8 +4,10 @@
   branch = ideal-periodic
 [submodule "ccpp/framework"]
   path = ccpp/framework
-  url = https://github.com/NCAR/ccpp-framework
-  branch = main
+  url = https://github.com/MicroTed/ccpp-framework.git
+  branch = ideal-periodic
+#  url = https://github.com/NCAR/ccpp-framework
+#  branch = main
 [submodule "ccpp/physics"]
   path = ccpp/physics
   url = https://github.com/ufs-community/ccpp-physics
