Changed radiation check to use errmsg instead of ierr2

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,10 +4,8 @@
   branch = ideal-periodic
 [submodule "ccpp/framework"]
   path = ccpp/framework
-  url = https://github.com/MicroTed/ccpp-framework.git
-  branch = ideal-periodic
-#  url = https://github.com/NCAR/ccpp-framework
-#  branch = main
+  url = https://github.com/NCAR/ccpp-framework
+  branch = main
 [submodule "ccpp/physics"]
   path = ccpp/physics
   url = https://github.com/ufs-community/ccpp-physics
